[package]
name = "recovery-planner"
version = "0.1.0"
edition = "2021"

[workspace]
resolver = "2"
members = [
  "contracts/*",
]

[dependencies]
axum = "0.7"
hyper = { version = "1", features = ["server"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.34", features = ["full"] }
thiserror = "1.0"

[workspace.dependencies]
soroban-sdk = "25"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

# For more information about this profile see https://soroban.stellar.org/docs/basic-tutorials/logging#cargotoml-profile
[profile.release-with-logs]
inherits = "release"
debug-assertions = true
